fixed z-index again

--- a/public/css/cms.css
+++ b/public/css/cms.css
@@ -255,7 +255,6 @@ input[type="checkbox"] {
     padding-top: 3vw;
     padding-bottom: 3vw;
     padding-inline: 1vw;
-    z-index: -1;
     width: 30%;
     height: 40vh;
     background: rgba(255, 255, 255, 0.87);
@@ -527,6 +526,7 @@ input[type="checkbox"]:before {
         content: "\f00d";
     }
     nav ul {
+        z-index: 12;
         position: fixed;
         top: 80px;
         left: -100%;
